@@ -1,0 +1,24 @@
+# Generated by Django 5.0.6 on 2024-07-05 15:13
+
+import django.db.models.deletion
+from django.conf import settings
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('idea', '0008_idea_investors'),
+        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
+    ]
+
+    operations = [
+        migrations.CreateModel(
+            name='Favourite',
+            fields=[
+                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+                ('idea', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='favourite', to='idea.idea', verbose_name='Idea')),
+                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='user', to=settings.AUTH_USER_MODEL, verbose_name='User')),
+            ],
+        ),
+    ]
