@@ -1,0 +1,4 @@
+from django.contrib import admin
+from notifications.models import Notification
+
+admin.site.register(Notification)
