@@ -1,0 +1,31 @@
+# Generated by Django 5.0.6 on 2024-07-05 19:33
+
+import django.db.models.deletion
+from django.conf import settings
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    initial = True
+
+    dependencies = [
+        ('idea', '0009_favourite'),
+        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
+    ]
+
+    operations = [
+        migrations.CreateModel(
+            name='Notification',
+            fields=[
+                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+                ('notification_type', models.IntegerField(choices=[(1, 'LikeIdea'), (2, 'DisLikeIdea'), (3, 'Comment'), (4, 'Follow')])),
+                ('text_preview', models.CharField(blank=True, max_length=90)),
+                ('date', models.DateTimeField(auto_now_add=True)),
+                ('is_seen', models.BooleanField(default=False)),
+                ('idea', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='noti_idea', to='idea.idea')),
+                ('sender', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='noti_from_user', to=settings.AUTH_USER_MODEL)),
+                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='noti_to_user', to=settings.AUTH_USER_MODEL)),
+            ],
+        ),
+    ]
