@@ -1,0 +1,66 @@
+{% extends 'base.html' %}
+
+{% block title %}
+    Notifications
+{%  endblock %}
+
+{% block body %}
+
+    <h3>Your Notifications:</h3>
+
+        {% for notification in notifications %}
+
+            <!-- FOR LIKE --->
+            {% if notification.notification_type == 1 and notification.sender.id != request.user.id %}
+
+                    <hr>
+                      <div>
+                        <div>
+                            <a href="{% url 'notifications:delete-notification' id=notification.id %}" class="delete">Delete</a>
+                            <br>
+                            <img class="rounded-circle shadow-1-strong me-2" src="{{ notification.sender.avatar.url }}" alt="avatar" width="40px" height="40px">
+                            <strong>{{ notification.sender.first_name }} {{ notification.sender.last_name }}</strong>
+                            <small>@{{ notification.sender.username }}</small>
+                            <br>
+                            <br>
+                            <p>👍Liked your Idea</p>
+                            <strong><small>{{ notification.date }}</small></strong>
+                        </div>
+                      </div>
+
+                      <div>
+                          <strong>{{ notification.idea.title }}</strong>
+                              <img src="{{ notification.idea.image.url }}" width="180px" height="100px">
+                      </div>
+
+            {% endif %}
+
+            <!-- FOR DISLIKES --->
+            {% if notification.notification_type == 2 and notification.sender.id != request.user.id %}
+
+
+                    <hr>
+                      <div>
+                        <div>
+                            <a href="{% url 'notifications:delete-notification' id=notification.id %}" class="delete">Delete</a>
+                            <br>
+                            <img class="rounded-circle shadow-1-strong me-2" src="{{ notification.sender.avatar.url }}" alt="avatar" width="40px" height="40px">
+                            <strong>{{ notification.sender.first_name }} {{ notification.sender.last_name }}</strong>
+                            <small>@{{ notification.sender.username }}</small>
+                            <br>
+                            <br>
+                            <p>👎Disliked your Idea</p>
+                            <strong><small>{{ notification.date }}</small></strong>
+                        </div>
+                      </div>
+
+                      <div>
+                          <strong>{{ notification.idea.title }}</strong>
+                              <img src="{{ notification.idea.image.url }}" width="180px" height="100px">
+                      </div>
+            {% endif %}
+
+        {% endfor %}
+
+
+{% endblock %}
