@@ -1,0 +1,9 @@
+from django.urls import path
+from notifications import views
+
+app_name = 'notifications'
+
+urlpatterns = [
+    path('', views.ShowNotifications, name='show-notifications'),
+    path('delete/<int:id>', views.DeleteNotification, name='delete-notification'),
+]
