@@ -91,11 +91,17 @@ User
 - Создана модель partnership и отображение соавторов идеи
 - Создана модель investment и отображение инвесторов идеи
 
+5 Июля:
+- Выпадающий список Профиля пользователя
+- Система уведомлений (Liked/DisLiked Idea)
+
 
 
 СДЕЛАТЬ ПОСЛЕ:
-- Уведомления
-- Меню пользователя
+- Избранные Idea
+- Доработать меню пользователя
+- Система DM
+- Уведомления Follow, Favourite, Investment, Rating, Partnership, DM
 - Сделать View для IdeaStatus (чтобы одним нажатием менялся статус)
 - Сделать View для Co-Authors
 - Сделать View для Investors
